# venom-chess

./: Cargo.toml
src/: main.rs  transposition_table.rs
src/ai/: board.rs  minimax.rs  mod.rs  piece.rs  random_play.rs
src/game_engine/: board.rs  chessMove.rs  chess_move.rs  color.rs  king_check.rs  mod.rs  piece.rs  piece_moves.rs
src/game_engine/board/: basic.rs  display.rs  mod.rs  pst.rs  zobrist.rs
src/runner/: mod.rs
src/solver/: alpha_beta.rs  alpha_beta_transp.rs  ansi_player.rs  fallback_player.rs  id_quiescence.rs  iterative_deepening.rs  minimax.rs  mod.rs  move_order.rs  player.rs  quiescence.rs  random_play.rs
src/stats/: mod.rs
src/ui/: mod.rs
