[package]
name = "venom-chess"
version = "0.1.0"
authors = ["jonay2000 <jonabent@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
crossterm = "0.19.0"
lazy_static = "1.4.0"

[profile.release]
opt-level = 3
lto = true